Updated index.html to trigger build.

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 
 <head>
     <script>
-        console.log("Hello World!");
+        console.log("Hello World!!!");
     </script>
 </head>
 
 <body>
-    Hello World!
+    Hello World!!!
 </body>
 
 </html>
